Fixed firefox popup rendering overflow issue

--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -198,6 +198,7 @@ body {
     height: 100%;
     display: flex;
     flex-flow: column;
+    min-height: 1px;
 }
 
 .swatch {
